assets/css/index.css
:root {
    --dark: #370031;
    --yellow: #EDFFAB;
    --rgb-yellow: 237,255,171;
    --light-blue: #98DFEA;
    --rose: rgb(196, 151, 153);
    --rgb-rose: 196, 151, 153;  /*  58 */
    --box-shadow:  rgba(220, 214, 107, 0.376) -3px -3px 6px 1px inset, rgba(255, 253, 214, 0.832) 3px 3px 6px 0px inset, rgba(255, 251, 149, 0) 6px 2px 16px 0px, rgba(255, 253, 201, 0) -6px -2px 16px 0px; 
    --box-shadow-hover: rgba(220, 214, 107, 0.376) -3px -3px 6px 1px inset, rgba(255, 253, 214, 0.832) 3px 3px 6px 0px inset, rgba(255, 251, 149, 0.831) 6px 2px 16px 0px, rgba(255, 253, 201, 0.8) -6px -2px 16px 0px; 
    --card-shadow-hover:  rgba(255, 251, 149, 0.831) 18px 6px 32px 0px, rgba(255, 253, 201, 0.8) -18px -6px 32px 0px; 
    --text-shadow-yellow:  rgba(255, 251, 149, 0.831) 6px 2px 16px , rgba(255, 253, 201, 0.8) -6px -2px 16px;
    --text-shadow-hover: rgba(255, 251, 149, 0.831) 3px 1px 16px , rgba(255, 253, 201, 0.8) -3px -1px 16px;
    --circle-shadow: rgba(255, 251, 149, 0.831) 6px 2px 16px 0px, rgba(255, 253, 201, 0.8) -6px -2px 16px 0px;
    --transition-text-shadow: text-shadow 0.4s ease-out;
    --transition-box-shadow: box-shadow 0.4s ease-out;
    --transition-text-color: color 0.4s ease-out;
    --transition-background-color: background-color 0.4s ease-out;
    --font-family-main: "monarcha", serif;
    --font-family-secondary: "soleil", sans-serif;
    --font-family-code: "Fira Code", monospace;
  }
* {
box-sizing: border-box;
}
body {
font-family: var(--font-family-secondary);
/* font-weight: 300; */
font-style: normal;
line-height: 1.5;
}

/* ------- NAV ------- */
.navbar {  
    font-style: normal;
    color: var(--dark);
}
.navbar-brand h3{
    font-family: var(--font-family-code);
    font-weight: 800;
    color: var(--dark);
    transition: var(--transition-text-shadow);
}
.nav-link {
    font-family: var(--font-family-secondary);
    font-weight: 600;
    color: var(--dark);
    transition: var(--transition-text-shadow); 
}
.navbar-brand h3:hover, .nav-link:hover {
    color: var(--yellow);
    text-shadow: var(--text-shadow-yellow);
}

/* ------- HERO ------- */
h1 {
    font-family: var(--font-family-main);
    font-weight: 700;
    font-style: normal;
    color: var(--dark);
}
h1 span {
    text-shadow: var(--text-shadow-yellow);
}
.hero-cont {
    background-image: url(../images/hero-pink-mix2.png);
    background-size: cover;
    background-position: bottom center;
    background-repeat: no-repeat;
    height: 110vh;
    /* background-color: rgb(var(--rgb-rose)); */
}
.hero-cont h2, h1 span {
    font-family: var(--font-family-secondary);
    font-weight: 500;
    font-style: italic;
    color: var(--yellow);
}
.hero-cont h2 {
    color: var(--dark);
}


/* ------- BUTTONS ------- */
.button , .navbar-toggler {
    background-color: var(--yellow);
    color: var(--dark); 
    font-weight: 400;
    border: none;
    box-shadow: var(--box-shadow);
    transition: var(--transition-box-shadow);
    width: max-content;
    margin: auto;
}
.button:hover, .navbar-toggler:hover {
    background-color: var(--yellow);
    color: rgb(var(--rgb-rose));
    font-weight: 400;
    box-shadow: var(--box-shadow-hover);
}
.button:active, .navbar-toggler:active {
    border: 2px solid var(--dark) !important;
    background-color: var(--yellow) !important;
    color: var(--dark) !important;
}

/* ------- ABOUT ------- */
#about-me {
    background-color: rgb(var(--rgb-rose));
    min-height: 100vh;
}
#about-me h2 {
    background-color: rgb(var(--rgb-rose));
}
#about-me h3 {
    color: var(--dark);
    font-family: var(--font-family-main);
}
#about-me p {
    color: var(--dark);
}
#about-me li {
    color: var(--dark);
    font-weight: 600;
    font-style: italic;
    font-size: 1.5rem;  
}
#contact {
    display: flex;
    flex-direction: column;
    /* height: 100%; */
    justify-content: center;
    align-items: center; 
    margin-top: 3rem;
}
#contact h3 {
    background-color: rgb(var(--rgb-rose));
    position: relative;
    bottom: -1.5rem;
    padding-inline: 1rem;
    width: max-content;
    margin: auto;
}
.contact-content {
    border: 3px solid var(--dark);
    border-radius: 10px;
    width: max-content;
    padding: 2.5rem 3rem 2rem 3rem;
}
.contact-button {
    display: flex;
    height: 100%;
    align-items: center;

}
/* ------- Section Header ------- */
.section-header {
    font-family: var(--font-family-main);
    color: var(--dark);
    border-bottom: 4px solid var(--dark);
    /* border-bottom: 4px solid var(--yellow); */
    margin-bottom: 4rem;
}
.section-header h2 {
    width: max-content;
    background-color: white;
    position: relative;
    bottom: -2rem;
}

/* ------- Cards ------- */
#work-header-bird {
    min-width: 10%;
    max-width: 100px;
    position: relative;
    bottom: -2.5rem;
}
#work-spacer {
    width: 12%; /* counters the width of the bird so the text stays centered */
}
.card {
    border: 8px solid var(--yellow);
    border-radius: 20px;
    text-decoration: none;
    /* height: max-content; */
    transition: var(--transition-box-shadow);
    background: linear-gradient(to top, white, #d6bcae 3%, white 7%, var(--yellow));
}
.card:hover {
    border: 8px solid var(--yellow);
    text-decoration: none;
    box-shadow: var(--card-shadow-hover);  
}
.card-body {
    padding-bottom: 0;
    color: var(--dark);
    transition: var(--transition-text-color);
}
.card-body:hover {
    color: var(--rose);
    
}
.card-subtitle {
    font-weight: 600;
}
#kangaroo-mouse,
#baby-deer,
#hedgehog,
#hedgehog1,
#otter,
#bird {
    position: relative;
}
#kangaroo-mouse {
    width: 120%;
    bottom: -2rem;
    left: -2.1rem;
}
#baby-deer {
    bottom: -.75rem;
    
}
#hedgehog {
    width: 120%;
    left: -2.5rem;
    bottom: -1.5rem;
}
#hedgehog1 {
    width: 120%;
    bottom: -2.25rem;
    left: -1rem;
}
#otter {
    width: 120%;
    left: -2rem;
    transform: scaleX(-1);
    margin-top: 1rem;
}
#bird {
    width: 115%;
    left: -.5rem;
    bottom: -1rem;
    transform: scaleX(-1);
}

/* ------- Skills & Characteristics ------- */
#skills {
    background-color: var(--dark);
    /* min-height: 100vh; */
}
#skills .section-header {
    border-bottom-color: var(--rose);
}
#skills h2,
#skills h3 {
    background-color: var(--dark);
}
#skills h2,
#skills h3,
#skills p,
#skills li {
    color: var(--rose);
}
#skills ul {
    border: 3px solid var(--rose);
    border-radius: 10px;
    transition: var(--transition-background-color);
    /* width: 100%; */
    /* padding: 1rem 2rem 1rem 2rem; */
}
#skills ul:hover {
    background-color: var(--yellow);
    border: 3px solid var(--yellow);  
}

/* ------- Values ------- */
#key-value {
    background-color: var(--rose);
    /* min-height: 100vh; */
}
#key-value h2,
#key-value h3 {
    background-color: var(--rose);
}
#key-value h2 {
    font-family: var(--font-family-code);
    position: relative;
    z-index: 2;
    width: max-content;
    color: var(--dark);
}
.value {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    min-width: 325px;
    height: 325px;
    padding: 3rem;
    position: relative;
  }
  .value p {
    position: relative;
    z-index: 2;
  }
  .value h5 {
    position: relative;
    z-index: 2;
    color: var(--dark);
    font-weight: 600;
  }
  #values {
    position: relative;
  }
  .values-border {
    content: '';
    position: absolute;
    top: 17%;
    left: 17%;
    right: 17%;
    bottom: 0;
    border: 3px solid var(--dark); /* Border thickness and color */
    border-radius: 15px; /* Adjust for the desired border appearance */
    z-index: 1; /* Send it to the back */
  }
  .circle {
    background-color: var(--yellow);
    border-radius: 50%;
    width: 175px;
    height: 175px;
    position: absolute; 
    z-index: 1;
    top: 50%; 
    left: 50%;
    box-shadow: var(--circle-shadow); 
  }
  #circle1 {
    transform: translate(-110%, -70%); /* Center the circle within its parent */
  }
  #circle2 {
    transform: translate(10%, -50%);
  }

/* ------- Footer ------- */
#footer {
    background-color: var(--dark);
}
#footer .nav-link,
#footer h6,
#footer p {
    color: var(--rose);
}
#footer .nav-link:hover {
    color: var(--yellow);
    text-shadow: var(--text-shadow-hover);
}
.footer-link-cont {
    border-left: 1px solid var(--rose);
    padding-left: 1rem;
}
#footer .contact-content {
    border-color: var(--rose);
}

/* adds styling to the nav menu after the menu items are collapsed */
@media only screen and (max-width: 992px) {
    .navbar-collapse {
        text-align: end;
        background-color: rgba(var(--rgb-yellow), 0.9);
        padding-right: 1rem;
    }
    .nav-link:hover {
        color: rgb(var(--rgb-rose));
        text-shadow: var(--text-shadow-hover);
    }
}

